# splitfree

./: .envrc  .envrc.local  .gitignore  Dockerfile  LICENSE  Procfile  README.md  buildspec.yml  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  requirements_prod.txt  zapp_settings.json  zappa_settings.json
.github/workflows/: django.yml  zappa_deploy.yml
auth/: urls.py  views.py
auth_app/: authentication.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
auth_app/migrations/: 0001_initial.py
expenses/: admin.py  apps.py  models.py  serializers.py  signals.py  summray_calculate.py  urls.py  utils.py  views.py
expenses/migrations/: 0001_initial.py  0002_expense_expense_icon.py  0002_split.py  0003_expense_expense_date.py
expenses/tests/: test_expense_apis.py  test_simplify_debts.py
groups/: admin.py  apps.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
groups/migrations/: 0001_initial.py  0002_expensegroup_created_by_expensegroup_uuid.py  0003_expensegroup_description.py  0004_expensegroup_simplify_debt.py  0005_expensegroup_group_icon.py
splitfree_backend/: asgi.py  settings.py  urls.py  wsgi.py
transactions/: models.py  serializers.py  tests.py  urls.py  views.py
transactions/migrations/: 0001_initial.py  0002_transaction_transaction_date.py  0003_transaction_description.py
utils/: gemini_api_call.py
